--- a/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
+++ b/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
@@ -126,9 +126,7 @@
       <AdditionalDependencies>SoundTouchD(x64).lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\x64\Debug\strmbasd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(TargetPath)" "$(ProjectDir)"</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -172,9 +170,7 @@
       <AdditionalDependencies>SoundTouch(x64).lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\x64\Release\strmbase.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(TargetPath)" "$(ProjectDir)"</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="TvtAudioStretchFilter.cpp" />
