--- a/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
+++ b/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
@@ -107,9 +107,7 @@
       <AdditionalDependencies>SoundTouchD.lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\Debug\strmbasd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(TargetPath)" "$(USERPROFILE)\AppData\Local\TVTest"</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -147,9 +145,7 @@
       <AdditionalDependencies>SoundTouch.lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\Release\strmbase.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(TargetPath)" "$(USERPROFILE)\AppData\Local\TVTest"</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
