--- a/src/TvtPlay.vcxproj.filters
+++ b/src/TvtPlay.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="WindowUtil.h">
       <Filter>ヘッダー ファイル\TVTestStatusView</Filter>
     </ClInclude>
+    <ClInclude Include="Playlist.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TvtPlay.cpp">
@@ -94,6 +97,9 @@
     </ClCompile>
     <ClCompile Include="WindowUtil.cpp">
       <Filter>ソース ファイル\TVTestStatusView</Filter>
+    </ClCompile>
+    <ClCompile Include="Playlist.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
