--- a/src/TvtPlay(vc8).vcproj
+++ b/src/TvtPlay(vc8).vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\TvtPlayUtil.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Util.cpp"
 				>
 			</File>
@@ -277,6 +281,10 @@
 			</File>
 			<File
 				RelativePath=".\TvtPlay.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TvtPlayUtil.h"
 				>
 			</File>
 			<File
