--- a/src/TvtPlay(vc8).vcproj
+++ b/src/TvtPlay(vc8).vcproj
@@ -186,6 +186,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\AsyncFileReader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ChapterMap.cpp"
 				>
 			</File>
@@ -259,6 +263,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\AsyncFileReader.h"
+				>
+			</File>
 			<File
 				RelativePath=".\ChapterMap.h"
 				>
