--- a/src/TvtPlay.vcxproj.filters
+++ b/src/TvtPlay.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClInclude Include="AsyncFileReader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="CaptionAnalyzer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="trex.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TvtPlay.cpp">
@@ -117,6 +123,12 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="AsyncFileReader.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="CaptionAnalyzer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="trex.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
