--- a/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
+++ b/TvtAudioStretchFilter_src/TvtAudioStretchFilter.vcxproj
@@ -69,29 +69,29 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetExt>.ax</TargetExt>
-    <IncludePath>..\soundtouch\include;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses;$(IncludePath)</IncludePath>
-    <LibraryPath>..\soundtouch\lib;$(LibraryPath);$(VSInstallDir);$(VSInstallDir)lib</LibraryPath>
+    <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Configuration);$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <TargetExt>.ax</TargetExt>
-    <IncludePath>..\soundtouch\include;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses;$(IncludePath)</IncludePath>
-    <LibraryPath>..\soundtouch\lib;$(LibraryPath);$(VSInstallDir);$(VSInstallDir)lib</LibraryPath>
+    <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Platform)\$(Configuration);$(LibraryPath)</LibraryPath>
     <TargetName>$(ProjectName)(x64)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetExt>.ax</TargetExt>
-    <IncludePath>..\soundtouch\include;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses;$(IncludePath)</IncludePath>
-    <LibraryPath>..\soundtouch\lib;$(LibraryPath);$(VSInstallDir);$(VSInstallDir)lib</LibraryPath>
+    <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Configuration);$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetExt>.ax</TargetExt>
-    <IncludePath>..\soundtouch\include;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses;$(IncludePath)</IncludePath>
-    <LibraryPath>..\soundtouch\lib;$(LibraryPath);$(VSInstallDir);$(VSInstallDir)lib</LibraryPath>
+    <IncludePath>..\..\soundtouch\include;..\..\baseclasses;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\soundtouch\lib;..\..\baseclasses\$(Platform)\$(Configuration);$(LibraryPath)</LibraryPath>
     <TargetName>$(ProjectName)(x64)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -106,7 +106,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SoundTouchD.lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\Debug\strmbasd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SoundTouchD.lib;winmm.lib;strmbasd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
       <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -124,7 +124,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SoundTouchD(x64).lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\x64\Debug\strmbasd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SoundTouchD(x64).lib;winmm.lib;strmbasd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
       <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -146,7 +146,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SoundTouch.lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\Release\strmbase.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SoundTouch.lib;winmm.lib;strmbase.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
       <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -168,7 +168,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SoundTouch(x64).lib;winmm.lib;$(WindowsSdkDir)Samples\multimedia\directshow\baseclasses\x64\Release\strmbase.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SoundTouch(x64).lib;winmm.lib;strmbase.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TvtAudioStretchFilter.def</ModuleDefinitionFile>
       <AdditionalOptions>/PDBALTPATH:%_PDB% %(AdditionalOptions)</AdditionalOptions>
     </Link>
