--- a/src/TvtPlay.vcxproj
+++ b/src/TvtPlay.vcxproj
@@ -162,13 +162,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Aero.h" />
-    <ClInclude Include="AsyncFileReader.h" />
+    <ClInclude Include="BufferedFileReader.h" />
     <ClInclude Include="BasicWindow.h" />
     <ClInclude Include="CaptionAnalyzer.h" />
     <ClInclude Include="ChapterMap.h" />
     <ClInclude Include="ColorScheme.h" />
     <ClInclude Include="DrawUtil.h" />
     <ClInclude Include="Playlist.h" />
+    <ClInclude Include="ReadOnlyFile.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="TvtPlayUtil.h" />
@@ -182,13 +183,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Aero.cpp" />
-    <ClCompile Include="AsyncFileReader.cpp" />
+    <ClCompile Include="BufferedFileReader.cpp" />
     <ClCompile Include="BasicWindow.cpp" />
     <ClCompile Include="CaptionAnalyzer.cpp" />
     <ClCompile Include="ChapterMap.cpp" />
     <ClCompile Include="ColorScheme.cpp" />
     <ClCompile Include="DrawUtil.cpp" />
     <ClCompile Include="Playlist.cpp" />
+    <ClCompile Include="ReadOnlyFile.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="TvtPlayUtil.cpp" />
     <ClCompile Include="StatusView.cpp" />
